<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_gas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/gas"/>

        <Button
            android:id="@+id/btn_maintain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/maintain"/>

        <Button
            android:id="@+id/btn_others"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/other"/>
    </LinearLayout>

    <ListView
        android:id="@+id/cylinder_listView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:dividerHeight="0.0dip"
        android:fadingEdge="none"
        android:visibility="visible"/>
    <!--android:nestedScrollingEnabled="false"-->
    <!--android:outlineProvider="bounds"-->

</LinearLayout>
