<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_height="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:background="?attr/colorPrimary">
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/meterReading"
            android:id="@+id/btn_meterReading"
            android:onClick="onClick_btn_meterReading"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="1"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="出入氣"
            android:id="@+id/btn_barcodeScanning"
            android:onClick="onClick_btn_barcodeScanning"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/routePlanning"
            android:id="@+id/btn_routePlanning"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="1"
            android:onClick="onClick_btn_navigation"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/gasPricing"
            android:id="@+id/btn_priceGas"
            android:onClick="onClick_btn_priceGas"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/dataClient"
            android:id="@+id/btn_dataClient"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="1"
            android:onClick="onClick_btn_clientInfo"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/balancing"
            android:id="@+id/btn_balancing"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="1"
            android:onClick="onClick_btn_balancing"/>
    </LinearLayout>


</LinearLayout>